cmake_minimum_required(VERSION 3.10)
project(AuthorisationTemplate)
set(CMAKE_CXX_STANDARD 17)
include_directories(C:/Program\ Files/MySQL/Connector\ C++\ 8.0/include)
link_directories(C:/Program\ Files/MySQL/Connector\ C++\ 8.0/lib64/vs14)
include_directories(C:/boost_1_78_0/boost_1_78_0)
link_directories(C:/boost_1_78_0/boost_1_78_0/vs2019sp1/Win32/lib)
include_directories(D:/programms/OpenSSL-Win64/include)
link_directories(D:/programms/OpenSSL-Win64/lib)
set(PROJECT_LINK_LIBS libmysqlcppconn8.lib)
add_library(AuthLibTempl STATIC auth.hpp auth.cpp)
target_link_libraries(AuthLibTempl "C:/Program\ Files/MySQL/Connector\ C++\ 8.0/lib64/vs14/mysqlcppconn8.lib")
#target_include_directories(AuthLibTempl .)
#add_definitions(-D_GLIBCXX_USE_CXX11_ABI=0)
